[tool.poetry]
name = "agv_rl"
version = "1.0.0"
description = "RL training framework for AGV scheduling"
license = "MIT"
authors = ["Yancheng Liang <lych1233@gmail.com>"]
readme = "README.md"
repository = "https://github.com/lych1233/AGV_RL"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Cython",
	"Programming Language :: Python :: 3",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
packages = []

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"